# dymad-dev

./: .gitignore  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
docs/: api_ref.rst  conf.py  examples.rst  getting_started.rst  index.rst  requirements.txt  roadmap.rst
docs_archive/: examples.rst
examples/: cases.py  proc_2d.py  proc_dp.py  prod_2d.py  prod_dp.py
examples/1d_oscillator/: lti_model.yaml  part1.ipynb  part2.ipynb  part3.ipynb
examples/2d_koopman/: kp_model.yaml  main.ipynb  part1.ipynb  part2.ipynb  part3.ipynb
examples/aircraft_system/: config_gkbf_weak_form.yaml  config_kbf_weak_form.yaml  config_wgkbf.yaml  train_gkbf.py  train_kbf.py  train_wgkbf.py
examples/double_pendulum/: README.md  compare_training_approaches.py  config_ldm_node.yaml  config_ldm_weak_form.yaml  config_lstm.yaml  config_node.yaml  config_training_compare.yaml  config_wldm.yaml  config_wmlp.yaml  double_pendulum_data.yaml  double_pendulum_train.py  dp_kbf_node.yaml  dp_kbf_wf.yaml  dp_ldm_node.yaml  dp_ldm_wf.yaml  dp_train.py  train_ldm_node.py  train_lstm.py  train_node.py  train_wldm.py  train_wmlp.py
examples/double_pendulum_wmlp/: config.yaml  test.ipynb  train.py  train_node.py  train_wmlp.py  wMLP_nominal.pt
examples/ex1/: ex1.py  ex1_ldm_node.yaml
examples/ex2/: checkpoint_test.py  ex2.py  ex2_ldm_node.yaml  ex2_ldm_wf.yaml
examples/linear_graph/: ltg_data.yaml  ltg_kbf_node.yaml  ltg_kbf_wf.yaml  ltg_ldm_node.yaml  ltg_ldm_wf.yaml  ltg_train.py  main.ipynb
examples/linear_time_invariant/: lti_kbf_wf.yaml  lti_ldm_wf.yaml  lti_train.py
examples/lti_delay/: ltd_kbf_node.yaml  ltd_kbf_wf.yaml  ltd_ldm_wf.yaml  ltd_train.py
examples/rnn/: double_pendulum_data.yaml  dp_rnn.yaml  rnndp.py
examples/spring_dynamics/: spring_data.yaml  spring_ldm_node.yaml  spring_node.py
scripts/2d_koopman/: kp_data.yaml  kp_restart.py  kp_sweep_ct.py  kp_sweep_dt.py  kp_train.py
scripts/lco_sa/: run_sa.py
scripts/linear_graph/: ltg_kbf_ln.yaml  ltg_kbf_node.yaml  ltg_kbf_wf.yaml  ltg_ldm_node.yaml  ltg_ldm_wf.yaml  ltg_train.py
scripts/linear_graph_auto/: ltga_model.yaml  ltga_train.py
scripts/ltg_dt/: ltg_dkbf.yaml  (+3 more)
src/: __init__.py  data.py  train.py  utils.py
test/: numerics.py  test_sample.py  test_trajmgr.py  test_trajmgr_graph.py  test_transform.py
tests/: README.md  conftest.py  kp_model.yaml  ltg_model.yaml  ltga_data.yaml  lti_model.yaml  test_assert_linalg.py  test_assert_spectrum.py  test_assert_trajmgr.py  test_assert_trajmgr_graph.py  test_assert_trans_lift.py  test_assert_transform.py  test_assert_weak.py  test_workflow_kp.py  test_workflow_ltg.py  test_workflow_ltga.py  test_workflow_lti.py  test_workflow_sample.py
(+146 files in other folders)
